--- a/js/index.css
+++ b/js/index.css
@@ -63,9 +63,10 @@ body {
     position: sticky;
     top: 0;
     z-index: 99;
-    background: #DFEAFC;
+    background: gray;
     padding: 15px 10px;
     box-shadow: 0 2px 10px #ccc;
+    color: #fff;
 }
 
 #header .logo {
@@ -78,9 +79,9 @@ body {
     width: 58px;
     height: auto;
 }
-.logo a {
+.logo span {
 
-    font-size: 26px;
+    font-size: 22px;
     padding-left: 20px;
 }
 .logo a:hover {
@@ -103,11 +104,10 @@ body {
     height: 60px;
     line-height: 60px;
     font-size: 20px;
-    color: #000;
     text-align: center;
 }
 .menu-box ul li a {
-    color: #3dbc6c;
+    color: #000;
     cursor: pointer;
 }
 
@@ -127,18 +127,14 @@ body {
 }
 
 
-#banner-box {
-    width: 100%;
-    min-width: 1200px;
-    margin-top: 30px;
-}
+
 
 #banner {
-    height: 350px;
+    height: 400px;
+    margin-top: 30px;
 }
 #banner img {
     height: 100%;
-    object-fit: contain;
 }
 
 .main-title {
@@ -232,14 +228,7 @@ body {
     text-indent: 2em;
     padding-bottom: 10px;
 }
-/*
-#banner .pic ul {
-    width: 100% !important;
-}
 
-.mF_fancy_banner * {
-    width: 100%;
-}*/
 
 
 #footer {
@@ -318,6 +307,33 @@ body {
     width: 100%;
 }
 
+#banner {
+
+}
+.mySwiper {
+    width: 100%;
+    max-width: 1200px;
+    height: 100%;
+
+}
+
+.mySwiper .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.mySwiper .swiper-wrapper {
+
+}
+.mySwiper .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
 
 @media screen and (max-width: 750px) {
     #main-box {
@@ -346,8 +362,8 @@ body {
     #header .logo {
         flex-wrap: wrap;
     }
-    .logo a {
-        font-size: 18px;
+    .logo span {
+        padding-left: 15px;
     }
     .main-title {
         font-size: 22px;
