--- a/js/index.css
+++ b/js/index.css
@@ -22,26 +22,14 @@ ol, ul {
     list-style: none;
 }
 
-/*@font-face{
-    font-family: mulan;
-    src: url("font/Mulan/MuLan.woff");
-}
-@font-face{
-    font-family: xiyuan;
-    src: url("font/XiYuan/XiYuan.woff");
-}*/
 html {
     font-size: 18px;
     color: #000;
     line-height: 1.6;
     min-height: 100%;
-    font-family: 'Segoe Print';
     font-weight: bolder;
-    font-size: 18px;
 }
-html p {
 
-}
 .w {
     max-width: 1200px;
     margin: 0 auto;
@@ -149,7 +137,6 @@ body {
 
 .container-box {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -248,20 +235,10 @@ body {
 }
 
 
-.container-box {
-    justify-content: center;
-}
-
 .info-pic {
     text-align: center;
 }
 
-
-.main-title {
-    /*background-color: #006DBB;*/
-    /*color: #fff;*/
-    /*border-bottom: 1px solid #ccc;*/
-}
 
 .scale-pic {
     overflow: hidden;
@@ -307,14 +284,10 @@ body {
     width: 100%;
 }
 
-#banner {
-
-}
 .mySwiper {
     width: 100%;
     max-width: 1200px;
     height: 100%;
-
 }
 
 .mySwiper .swiper-slide {
@@ -335,49 +308,31 @@ body {
     object-fit: cover;
 }
 
-@media screen and (max-width: 750px) {
-    #main-box {
-        padding: 0 10px;
-    }
-    #header {
-        justify-content: center;
-    }
-    .container-box .item-box {
-        width: 50%;
-    }
-    .menu-box {
-        margin-left: 0;
-        width: 100%;
-        flex: none;
-    }
-    .container-box .item-box .item-pic {
-        aspect-ratio: 1 / 0.85;
-    }
-    .menu-box ul {
-        justify-content: center;
-    }
-    .menu-box ul li {
-        padding: 0 15px;
-    }
-    #header .logo {
-        flex-wrap: wrap;
-    }
-    .logo span {
-        padding-left: 15px;
-    }
-    .main-title {
-        font-size: 22px;
-        margin-top: 20px;
-        margin-bottom: 15px;
-    }
-    .container-box .item-box .item-info .title {
-        font-size: 20px;
-    }
-    .container-box .item-box .item-info .info {
-        font-size: 18px;
-        height: 60px;
-    }
-    .desc-pic .pic {
-        width: 50%;
-    }
+
+.product-detail {
+    display: flex;
+    flex-wrap: wrap;
+}
+.product-detail .item-box {
+    position: relative;
+    width: 33.33%;
+    aspect-ratio: 1/1;
+}
+.product-detail .item-pic {
+    width: 100%;
+    height: 100%;
+}
+.product-detail .item-info {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 28px;
+    color: #fff;
+    background: rgba(0,0,0,.3)
 }
