--- a/js/index.css
+++ b/js/index.css
@@ -315,12 +315,12 @@ body {
 }
 .product-detail .item-box {
     position: relative;
-    width: 33.33%;
-    aspect-ratio: 1/1;
+    width: 50%;
+    padding: 10px;
 }
 .product-detail .item-pic {
     width: 100%;
-    height: 100%;
+    height: auto
 }
 .product-detail .item-info {
     position: absolute;
@@ -329,8 +329,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 20px);;
+    height: calc(100% - 20px);
     text-align: center;
     font-size: 28px;
     color: #fff;
