--- a/js/index.css
+++ b/js/index.css
@@ -5,8 +5,8 @@
     box-sizing: border-box;
     border: 0;
     font-size: 100%;
-    font: inherit;
     vertical-align: baseline;
+    font-family: Segoe Print;
 }
 
 a,
