--- a/js/index.css
+++ b/js/index.css
@@ -280,8 +280,22 @@ body {
     display: none;
 }
 
-.about-us {
-    width: 100%;
+.about-us-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about-us-item .about-pic {
+    width: 52%;
+    height: auto;
+}
+.about-us-item .about-txt {
+    flex: 1;
+    font-size: 30px;
+}
+.about-us-info {
+    font-size: 24px;
 }
 
 .mySwiper {
