--- a/js/index.css
+++ b/js/index.css
@@ -346,7 +346,8 @@ body {
     width: calc(100% - 20px);;
     height: calc(100% - 20px);
     text-align: center;
-    font-size: 28px;
+    font-size: 26px;
+    padding: 10px;
     color: #fff;
     background: rgba(0,0,0,.3)
 }
