--- a/js/index.css
+++ b/js/index.css
@@ -38,13 +38,40 @@ html {
 body {
     min-height: 100%;
 }
-
+#main-box {
+    padding-bottom: 30px;
+}
 #header {
     font-family: Segoe Print;
     display: flex;
     justify-content: space-between;
     padding-left: 3px;
     flex-wrap: wrap;
+}
+.main-item {
+    padding-bottom: 20px;
+}
+#banner {
+    background: #99CC66;
+}
+.about-us {
+    background: #CC9999;
+    color: #000;
+}
+.product-show {
+    background: #FF6666;
+}
+.product-details {
+    background: #CC9966;
+}
+.culture {
+}
+.contact-us {
+    background: #222;
+    color: #c6c4c4;
+}
+.contact-us a {
+    color: #e64343 !important;
 }
 
 .header-box {
@@ -119,16 +146,13 @@ body {
 
 #banner {
     height: 400px;
-    margin-top: 30px;
 }
 #banner img {
     height: 100%;
 }
 
 .main-title {
-    margin-top: 65px;
-    margin-bottom: 40px;
-    padding: 15px;
+    padding: 65px 0 30px;
     font-size: 32px;
     font-weight: bold;
     text-align: center;
@@ -318,7 +342,6 @@ body {
 .mySwiper .swiper-slide img {
     display: block;
     width: 100%;
-    height: auto;
     object-fit: cover;
 }
 
@@ -328,26 +351,53 @@ body {
     flex-wrap: wrap;
 }
 .product-detail .item-box {
-    position: relative;
     width: 50%;
     padding: 10px;
 }
+.product-detail .item-box .item-wrap {
+    position: relative;
+    aspect-ratio: 1/0.8;
+}
 .product-detail .item-pic {
     width: 100%;
-    height: auto
+    object-fit: cover;
 }
 .product-detail .item-info {
     position: absolute;
-    left: 10px;
-    top: 10px;
+    left: 0;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: calc(100% - 20px);;
-    height: calc(100% - 20px);
+    width: 100%;;
+    height: auto;
     text-align: center;
-    font-size: 26px;
+    font-size: 16px;
     padding: 10px;
     color: #fff;
-    background: rgba(0,0,0,.3)
+    background: rgba(0,0,0,.5)
 }
+
+.contact-map {
+    width: 50%;
+}
+.contact-map img {
+    width: 100%;
+    height: auto;
+}
+.contact-info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: -20px;
+}
+.contact-info .item {
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+.contact-info a {
+    color: inherit;
+}
+
