--- a/js/index.css
+++ b/js/index.css
@@ -51,6 +51,7 @@ body {
     flex-wrap: wrap;
 }
 .main-item {
+    padding-top: 50px;
     padding-bottom: 20px;
 }
 #banner {
@@ -166,7 +167,7 @@ body {
     position: sticky;
     top: 0;
     z-index: 99;
-    padding: 65px 0 30px;
+    padding: 30px 0;
     font-size: 32px;
     font-weight: bold;
     text-align: center;
