--- a/js/index.css
+++ b/js/index.css
@@ -386,7 +386,7 @@ body {
     align-items: center;
     width: 100%;;
     height: auto;
-    text-align: center;
+    text-align: left;
     font-size: 16px;
     padding: 10px;
     color: #fff;
