--- a/js/index.css
+++ b/js/index.css
@@ -90,7 +90,7 @@ body {
     top: 0;
     z-index: 99;*/
     background: gray;
-    padding: 15px 10px;
+    padding: 10px;
     box-shadow: 0 2px 10px #ccc;
     color: #fff;
 }
